<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xmlns="http://maven.apache.org/POM/4.0.0"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.yourorg</groupId>
	<artifactId>rewrite-recipe-starter</artifactId>
	<version>1.0.1-SNAPSHOT</version>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.openrewrite.recipe</groupId>
				<artifactId>rewrite-recipe-bom</artifactId>
				<version>3.10.0</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.junit</groupId>
				<artifactId>junit-bom</artifactId>
				<version>5.13.2</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.38</version>
			<scope>provided</scope>
			<optional>true</optional>
		</dependency>

		<!-- Refaster style recipes need the rewrite-templating annotation
		processor and dependency for generated recipes -->
		<dependency>
			<groupId>org.openrewrite</groupId>
			<artifactId>rewrite-templating</artifactId>
		</dependency>
		<dependency>
			<groupId>jakarta.annotation</groupId>
			<artifactId>jakarta.annotation-api</artifactId>
			<version>1.3.5</version>
		</dependency>
		<dependency>
			<groupId>jakarta.annotation</groupId>
			<artifactId>jakarta.annotation-api</artifactId>
			<version>3.0.0</version>
		</dependency>

		<!-- Makes Data flow analysis capabilities available to recipes -->
		<dependency>
			<groupId>org.openrewrite.meta</groupId>
			<artifactId>rewrite-analysis</artifactId>
		</dependency>

		<dependency>
			<groupId>com.google.errorprone</groupId>
			<artifactId>error_prone_core</artifactId>
			<version>2.39.0</version>
			<scope>provided</scope>
			<optional>true</optional>
			<exclusions>
				<exclusion>
					<groupId>com.google.auto.service</groupId>
					<artifactId>auto-service-annotations</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>org.openrewrite</groupId>
			<artifactId>rewrite-java</artifactId>
		</dependency>

		<dependency>
			<groupId>org.openrewrite</groupId>
			<artifactId>rewrite-yaml</artifactId>
		</dependency>

		<dependency>
			<groupId>org.openrewrite.recipe</groupId>
			<artifactId>rewrite-java-dependencies</artifactId>
		</dependency>

		<dependency>
			<groupId>org.eclipse.platform</groupId>
			<artifactId>org.eclipse.core.runtime</artifactId>
			<version>3.33.100</version>
		</dependency>

		<dependency>
			<groupId>org.openrewrite</groupId>
			<artifactId>rewrite-test</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<version>4.0.0-M1</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>33.4.8-jre</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.17.0</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-core</artifactId>
			<version>7.0.0-M6</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context</artifactId>
			<version>7.0.0-M6</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.14.0</version>
				<configuration>
					<testSource>${maven.compiler.source}</testSource>
					<testTarget>${maven.compiler.target}</testTarget>
					<compilerArgs>
						<arg>-parameters</arg>
					</compilerArgs>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
							<version>1.18.32</version>
						</path>
						<path>
							<groupId>org.openrewrite</groupId>
							<artifactId>rewrite-templating</artifactId>
							<version>1.26.0</version>
						</path>
					</annotationProcessorPaths>
					<release>21</release>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.3.0</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>3.3.0</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.3.1</version>
				<configuration>
					<nonFilteredFileExtensions>
						<nonFilteredFileExtension>jar</nonFilteredFileExtension>
					</nonFilteredFileExtensions>
				</configuration>
			</plugin>
			<!--
                Only needed when you want to apply the OpenRewriteBestPractices recipe to your
			recipes through
                ./mvnw rewrite:run -Drewrite.activeRecipes=com.yourorg.ApplyRecipeBestPractices
            -->
			<plugin>
				<groupId>org.openrewrite.maven</groupId>
				<artifactId>rewrite-maven-plugin</artifactId>
				<version>6.9.0</version>
				<configuration>
					<failOnDryRunResults>true</failOnDryRunResults>
			        <activeRecipes>
		          		<recipe>org.openrewrite.java.migrate.UpgradeToJava21</recipe>
			            <recipe>org.openrewrite.staticanalysis.JavaApiBestPractices</recipe>
			            <recipe>org.openrewrite.staticanalysis.CommonStaticAnalysis</recipe>
			            <recipe>org.openrewrite.staticanalysis.CodeCleanup</recipe>
<!--			            <recipe>org.openrewrite.recipes.rewrite.OpenRewriteRecipeBestPractices</recipe>-->
			        </activeRecipes>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>org.openrewrite.recipe</groupId>
						<artifactId>rewrite-migrate-java</artifactId>
						<version>3.8.0</version>
					</dependency>
					<dependency>
						<groupId>org.openrewrite.recipe</groupId>
						<artifactId>rewrite-rewrite</artifactId>
						<version>0.5.0</version>
					</dependency>
				</dependencies>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<!--
            When you want to generate a TypeTable for use in JavaParser for JavaTemplate,
		run the following command:
            ./mvnw generate-resources -Ptypetable
        -->
		<profile>
			<id>typetable</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.openrewrite.maven</groupId>
						<artifactId>rewrite-maven-plugin</artifactId>
						<version>6.9.0</version>
						<configuration>
							<recipeArtifactCoordinates>
								junit:junit:3.8.1,
							</recipeArtifactCoordinates>
						</configuration>
						<executions>
							<execution>
								<goals>
									<goal>typetable</goal>
								</goals>
								<phase>generate-resources</phase>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>
